--- a/projects/front-components/src/lib/components/filter-menu-item/filter-menu-item.component.html
+++ b/projects/front-components/src/lib/components/filter-menu-item/filter-menu-item.component.html
@@ -15,7 +15,7 @@
 	</ss-lib-button>
 	<ss-lib-button
 		[size]="ExtraSize.sm"
-		[type]="ButtonType.Text"
+		[type]="ButtonType.TextSecondary"
 		[icon]="IconType.Close"
 		(click)="removeFilter(filter())"
 	></ss-lib-button>
