--- a/projects/front-components/src/lib/components/filter-menu/filter-menu.component.html
+++ b/projects/front-components/src/lib/components/filter-menu/filter-menu.component.html
@@ -4,7 +4,7 @@
 ></ss-lib-filter-menu-item>
 <ss-lib-button
 	*ngIf="checkActiveFilter"
-	[type]="ButtonType.Text"
+	[type]="ButtonType.TextSecondary"
 	[text]="'Очистить все'"
 	(click)="clearAll()"
 >
