--- a/projects/front-components/src/lib/components/indicator-checklist-popup/indicator-checklist-popup.component.html
+++ b/projects/front-components/src/lib/components/indicator-checklist-popup/indicator-checklist-popup.component.html
@@ -17,7 +17,7 @@
 	<ng-content></ng-content>
 	<ss-lib-button
 		[size]="ExtraSize.xs"
-		[type]="ButtonType.Text"
+		[type]="ButtonType.TextSecondary"
 		[icon]="IconType.Close"
 		(click)="close()"
 	></ss-lib-button>
