--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.html
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.html
@@ -2,7 +2,7 @@
 	<ss-lib-button
 		class="number-picker__number-indicator indicator-start border-none"
 		[type]="ButtonType.Secondary"
-		[size]="ExtraSize.lg"
+		[size]="ExtraSize.xl"
 		[icon]="IconType.Minus"
 		[iconPosition]="IconPosition.OnlyIcon"
 		[disabled]="
@@ -33,7 +33,7 @@
 	<ss-lib-button
 		class="number-picker__number-indicator indicator-end"
 		[type]="ButtonType.Secondary"
-		[size]="ExtraSize.lg"
+		[size]="ExtraSize.xl"
 		[icon]="IconType.Plus"
 		[iconPosition]="IconPosition.OnlyIcon"
 		[disabled]="
