--- a/projects/front-components/src/lib/components/sidebar/sidebar.component.html
+++ b/projects/front-components/src/lib/components/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
 					[class.expanded]="
 						stateCanvas.sidebarType() === SidebarType.Full
 					"
-					[type]="ButtonType.Text"
+					[type]="ButtonType.TextSecondary"
 					[text]="closeBtnText()"
 					[icon]="IconType.ChevronLeftDouble"
 				/>
