--- a/projects/front-components/src/lib/shared/styles/custom-variables.scss
+++ b/projects/front-components/src/lib/shared/styles/custom-variables.scss
@@ -1,322 +1,4 @@
 @use '../assets/scss/modules/_fonts.scss';
-
-/* Mapped */
-:root {
-	/* Light */
-	/* color */
-	--border-information: var(--primary-500);
-	--border-disabled: var(--neutral-600);
-	--border-error: var(--error-300);
-	--border-focus: var(--primary-700);
-	--border-focus-error: var(--error-400);
-	--border-primary: var(--neutral-500);
-	--border-secondary: var(--neutral-600);
-	--border-secondary-hover: var(--neutral-700);
-	--border-success: var(--success-300);
-	--border-tertiary: var(--neutral-1100);
-	--border-warning: var(--warning-300);
-	--effects-shadows-10: #0e0e0e1a;
-	--effects-shadows-14: #0e0e0e24;
-	--effects-shadows-18: #0e0e0e2e;
-	--effects-shadows-3: #0e0e0e08;
-	--effects-shadows-4: #0e0e0e0a;
-	--effects-shadows-5: #0e0e0e0d;
-	--effects-shadows-6: #0e0e0e0f;
-	--effects-shadows-8: #0e0e0e14;
-	--icon-action-2: var(--neutral-1000);
-	--icon-action-2-on-color: var(--neutral-400);
-	--icon-action-hover-2: var(--neutral-1100);
-	--icon-action-hover-2-on-color: var(--neutral-300);
-	--icon-body: var(--neutral-1500);
-	--icon-body-2: var(--neutral-1100);
-	--icon-body-2-on-color: var(--neutral-600);
-	--icon-body-3: var(--neutral-900);
-	--icon-body-3-on-color: var(--neutral-700);
-	--icon-body-4: var(--neutral-800);
-	--icon-body-4-on-color: var(--neutral-800);
-	--icon-body-on-color: var(--neutral-300);
-	--icon-disabled: var(--neutral-700);
-	--icon-error: var(--error-600);
-	--icon-error-hover: var(--error-700);
-	--icon-headings: var(--neutral-1600);
-	--icon-headings-on-color: var(--neutral-200);
-	--icon-hero: var(--neutral-1600);
-	--icon-hero-on-color: var(--neutral-200);
-	--icon-information: var(--primary-default);
-	--icon-information-hover: var(--primary-900);
-	--icon-on-action: var(--neutral-white);
-	--icon-on-disabled: var(--neutral-800);
-	--icon-placeholder: var(--neutral-700);
-	--icon-placeholder-on-color: var(--neutral-800);
-	--icon-success: var(--success-600);
-	--icon-success-hover: var(--success-700);
-	--icon-warning: var(--warning-500);
-	--icon-warning-hover: var(--warning-600);
-	--surface-action: var(--primary-default);
-	--surface-action-2: var(--neutral-300);
-	--surface-action-3: var(--neutral-200);
-	--surface-action-4: var(--neutral-1500);
-	--surface-action-hover: var(--primary-900);
-	--surface-action-hover-2: var(--neutral-400);
-	--surface-action-hover-3: var(--neutral-300);
-	--surface-action-hover-4: var(--neutral-1100);
-	--surface-action-pressed: var(--primary-1000);
-	--surface-action-pressed-2: var(--neutral-500);
-	--surface-action-pressed-3: var(--neutral-400);
-	--surface-action-pressed-4: var(--neutral-1000);
-	--surface-backdrop: var(--neutral-1600);
-	--surface-disabled: var(--neutral-300);
-	--surface-disabled-selected: var(--neutral-700);
-	--surface-error: var(--error-50);
-	--surface-information: var(--primary-300);
-	--surface-information-hover: var(--primary-400);
-	--surface-information-pressed: var(--primary-500);
-	--surface-information-selected: var(--primary-200);
-	--surface-page: var(--neutral-100);
-	--surface-page-secondary: var(--neutral-200);
-	--surface-primary: var(--neutral-white);
-	--surface-secondary: var(--neutral-200);
-	--surface-tetriary: var(--neutral-1400);
-	--text-action-2: var(--neutral-1000);
-	--text-action-2-on-color: var(--neutral-400);
-	--text-action-hover-2: var(--neutral-1100);
-	--text-action-hover-2-on-color: var(--neutral-300);
-	--text-body: var(--neutral-1500);
-	--text-body-2: var(--neutral-1100);
-	--text-body-2-on-color: var(--neutral-600);
-	--text-body-3: var(--neutral-900);
-	--text-body-3-on-color: var(--neutral-700);
-	--text-body-4: var(--neutral-800);
-	--text-body-4-on-color: var(--neutral-800);
-	--text-body-on-color: var(--neutral-300);
-	--text-disabled: var(--neutral-700);
-	--text-error: var(--error-600);
-	--text-error-hover: var(--error-700);
-	--text-headings: var(--neutral-1600);
-	--text-headings-on-color: var(--neutral-200);
-	--text-hero: var(--neutral-1600);
-	--text-hero-on-color: var(--neutral-200);
-	--text-information: var(--primary-default);
-	--text-information-hover: var(--primary-900);
-	--text-on-action: var(--neutral-white);
-	--text-on-disabled: var(--neutral-800);
-	--text-placeholder: var(--neutral-700);
-	--text-placeholder-on-color: var(--neutral-800);
-	--text-success: var(--success-600);
-	--text-success-hover: var(--success-700);
-	--text-warning: var(--warning-500);
-	--text-warning-hover: var(--warning-600);
-
-	/* Mapped - Dark */
-	.dark {
-		--border-information: var(--primary-900);
-		--border-disabled: var(--neutral-900);
-		--border-error: var(--error-300);
-		--border-focus: var(--primary-700);
-		--border-focus-error: var(--error-400);
-		--border-primary: var(--neutral-1100);
-		--border-secondary: var(--neutral-1000);
-		--border-secondary-hover: var(--neutral-900);
-		--border-success: var(--success-300);
-		--border-tertiary: var(--neutral-500);
-		--border-warning: var(--warning-300);
-		--effects-shadows-10: #00000066;
-		--effects-shadows-14: #0000008f;
-		--effects-shadows-18: #000000b8;
-		--effects-shadows-3: #0000001f;
-		--effects-shadows-4: #00000029;
-		--effects-shadows-5: #00000033;
-		--effects-shadows-6: #0000003d;
-		--effects-shadows-8: #00000052;
-		--icon-action-2: var(--neutral-400);
-		--icon-action-2-on-color: var(--neutral-1000);
-		--icon-action-hover-2: var(--neutral-300);
-		--icon-action-hover-2-on-color: var(--neutral-1100);
-		--icon-body: var(--neutral-300);
-		--icon-body-2: var(--neutral-600);
-		--icon-body-2-on-color: var(--neutral-1000);
-		--icon-body-3: var(--neutral-700);
-		--icon-body-3-on-color: var(--neutral-900);
-		--icon-body-4: var(--neutral-800);
-		--icon-body-4-on-color: var(--neutral-800);
-		--icon-body-on-color: var(--neutral-1500);
-		--icon-disabled: var(--neutral-800);
-		--icon-error: var(--error-400);
-		--icon-error-hover: var(--error-300);
-		--icon-headings: var(--neutral-200);
-		--icon-headings-on-color: var(--neutral-1600);
-		--icon-hero: var(--neutral-200);
-		--icon-hero-on-color: var(--neutral-1600);
-		--icon-information: var(--primary-600);
-		--icon-information-hover: var(--primary-500);
-		--icon-on-action: var(--neutral-white);
-		--icon-on-disabled: var(--neutral-700);
-		--icon-placeholder: var(--neutral-800);
-		--icon-placeholder-on-color: var(--neutral-700);
-		--icon-success: var(--success-400);
-		--icon-success-hover: var(--success-300);
-		--icon-warning: var(--warning-500);
-		--icon-warning-hover: var(--warning-400);
-		--surface-action: var(--primary-default);
-		--surface-action-2: var(--neutral-1200);
-		--surface-action-3: var(--neutral-1300);
-		--surface-action-4: var(--neutral-1500);
-		--surface-action-hover: var(--primary-900);
-		--surface-action-hover-2: var(--neutral-1100);
-		--surface-action-hover-3: var(--neutral-1200);
-		--surface-action-hover-4: var(--neutral-1100);
-		--surface-action-pressed: var(--primary-1000);
-		--surface-action-pressed-2: var(--neutral-1000);
-		--surface-action-pressed-3: var(--neutral-1100);
-		--surface-action-pressed-4: var(--neutral-1000);
-		--surface-backdrop: var(--neutral-1600);
-		--surface-disabled: var(--neutral-1200);
-		--surface-disabled-selected: var(--neutral-700);
-		--surface-error: var(--error-900);
-		--surface-information: var(--primary-1200);
-		--surface-information-hover: var(--primary-1100);
-		--surface-information-pressed: var(--primary-1000);
-		--surface-information-selected: var(--primary-1300);
-		--surface-page: var(--neutral-1400);
-		--surface-page-secondary: var(--neutral-1500);
-		--surface-primary: var(--neutral-1400);
-		--surface-secondary: var(--neutral-1500);
-		--surface-tetriary: var(--neutral-200);
-		--text-action-2: var(--neutral-400);
-		--text-action-2-on-color: var(--neutral-1000);
-		--text-action-hover-2: var(--neutral-300);
-		--text-action-hover-2-on-color: var(--neutral-1100);
-		--text-body: var(--neutral-300);
-		--text-body-2: var(--neutral-600);
-		--text-body-2-on-color: var(--neutral-1000);
-		--text-body-3: var(--neutral-700);
-		--text-body-3-on-color: var(--neutral-900);
-		--text-body-4: var(--neutral-800);
-		--text-body-4-on-color: var(--neutral-800);
-		--text-body-on-color: var(--neutral-1500);
-		--text-disabled: var(--neutral-800);
-		--text-error: var(--error-400);
-		--text-error-hover: var(--error-300);
-		--text-headings: var(--neutral-200);
-		--text-headings-on-color: var(--neutral-1600);
-		--text-hero: var(--neutral-200);
-		--text-hero-on-color: var(--neutral-1600);
-		--text-information: var(--primary-600);
-		--text-information-hover: var(--primary-500);
-		--text-on-action: var(--neutral-white);
-		--text-on-disabled: var(--neutral-700);
-		--text-placeholder: var(--neutral-800);
-		--text-placeholder-on-color: var(--neutral-700);
-		--text-success: var(--success-400);
-		--text-success-hover: var(--success-300);
-		--text-warning: var(--warning-500);
-		--text-warning-hover: var(--warning-400);
-	}
-
-	--device-size-frame: 1280px;
-
-	/* FONT-SIZE */
-	--font-size-body-xs: 12px;
-	--font-size-body-sm: 14px;
-	--font-size-body-md: 16px;
-	--font-size-body-lg: 18px;
-	--font-size-body-xl: 20px;
-
-	--font-size-heading-xs: 24px;
-	--font-size-heading-sm: 30px;
-	--font-size-heading-md: 36px;
-	--font-size-heading-lg: 48px;
-	--font-size-heading-xl: 60px;
-	--font-size-heading-2xl: 72px;
-
-	/* LINE-HEIGHT */
-	--line-height-body-sm: 20px;
-	--line-height-body-md: 24px;
-	--line-height-body-lg: 28px;
-	--line-height-body-xl: 30px;
-	--line-height-heading-xs: 32px;
-	--line-height-heading-sm: 38px;
-	--line-height-heading-md: 44px;
-	--line-height-heading-lg: 60px;
-	--line-height-heading-xl: 72px;
-	--line-height-heading-2xl: 90px;
-
-	/* SPACING */
-	--paragraph-spacing-body-xs: 12px;
-	--paragraph-spacing-body-sm: 14px;
-	--paragraph-spacing-body-md: 16px;
-	--paragraph-spacing-body-lg: 18px;
-	--paragraph-spacing-body-xl: 20px;
-	--paragraph-spacing-heading-xs: 24px;
-	--paragraph-spacing-heading-sm: 30px;
-	--paragraph-spacing-heading-md: 36px;
-	--paragraph-spacing-heading-lg: 48px;
-	--paragraph-spacing-heading-xl: 60px;
-	--paragraph-spacing-heading-2xl: 72px;
-
-	/* FONT-FAMILY */
-	--type-font-family-body: onest;
-	--type-font-family-heading: onest;
-
-	/* FONT-WEIGHT */
-	--type-font-weight-regular: regular;
-	--type-font-weight-medium: medium;
-	--type-font-weight-semibold: semibold;
-	--type-font-weight-bold: bold;
-
-	/* Color Styles  */
-	--gradient-skeumorphic-gradient-border: linear-gradient(
-		180deg,
-		rgba(255, 255, 255, 0.12) 0%,
-		rgba(255, 255, 255, 0) 100%
-	);
-
-	/* Effect Styles  */
-	--shadow-xs: 0px 1px 2px 0px var(--effects-shadows-5);
-
-	--shadow-xs-skeumorphic:
-		0px 1px 2px 0px var(--effects-shadows-5),
-		0px -2px 0px 0px var(--effects-shadows-5) inset,
-		0px 0px 0px 1px
-			var(--app-shadow-xs-skeumorphic-border, var(--effects-shadows-18))
-			inset;
-
-	// сквеморфическая тень без обводки элемента
-	--shadow-xs-skeumorphic2:
-		0px 1px 2px 0px var(--effects-shadows-5),
-		0px -1px 0px 0px var(--effects-shadows-5) inset;
-
-	--shadow-sm:
-		0px 1px 2px -1px var(--effects-shadows-10),
-		0px 1px 3px 0px var(--effects-shadows-10);
-	--shadow-md:
-		0px 2px 4px -2px var(--effects-shadows-6),
-		0px 4px 6px -1px var(--effects-shadows-10);
-	--shadow-lg:
-		0px 2px 2px -1px var(--effects-shadows-4),
-		0px 4px 6px -2px var(--effects-shadows-3),
-		0px 12px 16px -4px var(--effects-shadows-8);
-	--shadow-xl:
-		0px 3px 3px -1.5px var(--effects-shadows-4),
-		0px 8px 8px -4px var(--effects-shadows-3),
-		0px 20px 24px -4px var(--effects-shadows-8);
-	--shadow-2xl:
-		0px 4px 4px -2px var(--effects-shadows-4),
-		0px 24px 48px -12px var(--effects-shadows-18);
-	--shadow-3xl:
-		0px 5px 5px -2.5px var(--effects-shadows-4),
-		0px 32px 64px -12px var(--effects-shadows-14);
-	--focus-rings-focus-ring:
-		0px 0px 0px 2px var(--surface-primary),
-		0px 0px 0px 4px var(--border-focus);
-	--focus-rings-focus-ring-shadow-xs:
-		0px 0px 0px 4px var(--border-focus),
-		0px 0px 0px 2px var(--surface-primary),
-		0px 1px 2px 0px var(--effects-shadows-5);
-	--focus-rings-focus-ring-shadow-xs-skeumorphic:
-		0px 0px 0px 2px var(--surface-primary),
-		0px 0px 0px 4px var(--border-focus),
-		0px 1px 2px 0px var(--effects-shadows-5),
-		0px -2px 0px 0px var(--effects-shadows-5) inset,
-		0px 0px 0px 1px var(--effects-shadows-18) inset;
-}
+@use './_variables/_light.scss';
+@use './_variables/_dark.scss';
+@use './_variables/_base.scss';
