--- a/projects/front-components/src/lib/shared/styles/mixins/text.scss
+++ b/projects/front-components/src/lib/shared/styles/mixins/text.scss
@@ -47,7 +47,7 @@
 	);
 }
 
-.heading-2xl {
+.heading-xxl {
 	@include text-styles(
 		var(--font-size-heading-2xl),
 		var(--line-height-heading-2xl)
