--- a/projects/front-components/src/lib/components/buttons/base-button/base-button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/base-button/base-button.component.scss
@@ -1,7 +1,7 @@
-:host {
-	display: flex;
-	align-items: center;
-}
+//:host {
+//	display: flex;
+//	align-items: center;
+//}
 
 button.custom-button {
 	position: relative;
