--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
@@ -14,6 +14,8 @@
 
 		border-radius: var(--border-radius-md) 0 0 var(--border-radius-md);
 		outline: 1px solid var(--border-primary) !important;
+		outline-offset: -1px;
+		margin-right: -1px;
 		z-index: 5;
 	}
 
@@ -26,6 +28,8 @@
 
 		border-radius: 0 var(--border-radius-md) var(--border-radius-md) 0;
 		outline: 1px solid var(--border-primary) !important;
+		outline-offset: -1px;
+		margin-left: -2px;
 		z-index: 5;
 	}
 
@@ -35,11 +39,18 @@
 		--app-custom-button-border-radius-bottom-right: 0;
 		--app-custom-button-border-radius-bottom-left: 0;
 		z-index: 1;
+		margin-right: 1px;
 	}
 
 	&__number-indicator.indicator-start:focus-within,
 	&__number-indicator.indicator-end:focus-within,
 	&__input-field:focus-within {
 		z-index: 10;
+	}
+
+	&__number-indicator,
+	&__input-field {
+		position: relative;
+		z-index: 1;
 	}
 }
