--- a/projects/test-app/src/app/stand/stand.component.scss
+++ b/projects/test-app/src/app/stand/stand.component.scss
@@ -2,6 +2,11 @@
 	width: 200px;
 }
 
+.button-center {
+	display: flex;
+	align-items: center;
+}
+
 .dark-close-button {
 	width: 50px;
 	height: 50px;
