--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -156,9 +156,7 @@
 />
 <br />
 
-
 <div class="button-center">
-
 	<ss-lib-button
 		[type]="ButtonType.Primary"
 		[text]="'Пнока'"
@@ -181,7 +179,6 @@
 />
 <br />
 
-
 <div class="button-center">
 	<ss-lib-button
 		[type]="ButtonType.Primary"
@@ -202,7 +199,6 @@
 		(click)="test()"
 	/>
 </div>
-
 
 <!--===============-->
 
@@ -305,7 +301,6 @@
 		(click)="test()"
 	/>
 </div>
-
 
 <!--===============-->
 
@@ -428,6 +423,176 @@
 	[size]="ExtraSize.sm"
 />
 <br />
+
+<!--===============-->
+
+<div class="dark-close-button">
+	<ss-lib-close-button
+		[type]="ButtonType.CloseDark"
+		[size]="ExtraSize.xxs"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseDark"
+		[size]="ExtraSize.xs"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseDark"
+		[size]="ExtraSize.sm"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseDark"
+		[size]="ExtraSize.md"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseDark"
+		[size]="ExtraSize.lg"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseDark"
+		[size]="ExtraSize.xl"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseDark"
+		[size]="ExtraSize.xxl"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseDark"
+		[size]="ExtraSize.xxl"
+		[disabled]="true"
+	/>
+</div>
+
+<div class="flex-center">
+	<ss-lib-close-button
+		[type]="ButtonType.CloseLight"
+		[size]="ExtraSize.xxs"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseLight"
+		[size]="ExtraSize.xs"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseLight"
+		[size]="ExtraSize.sm"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseLight"
+		[size]="ExtraSize.md"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseLight"
+		[size]="ExtraSize.lg"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseLight"
+		[size]="ExtraSize.xl"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseLight"
+		[size]="ExtraSize.xxl"
+	/>
+
+	<ss-lib-close-button
+		[type]="ButtonType.CloseLight"
+		[size]="ExtraSize.xxl"
+		[disabled]="true"
+	/>
+</div>
+<br />
+
+<ss-lib-utility-button />
+
+<ss-lib-preview-button />
+
+<ss-lib-backdrop-button />
+
+
+<ss-lib-link
+	[type]="ButtonType.LinkBlack"
+	[linkAppearance]="LinkAppearance.Standalone"
+	[text]="'Ссылка'"
+	[icon]="IconType.Plus"
+	[iconPosition]="IconPosition.Start"
+	[size]="ExtraSize.xxs"
+/>
+
+<ss-lib-link
+	[type]="ButtonType.LinkBlue"
+	[linkAppearance]="LinkAppearance.Inline"
+	[text]="'Ссылка'"
+	[icon]="IconType.Plus"
+	[iconPosition]="IconPosition.Start"
+	[size]="ExtraSize.xs"
+/>
+
+<ss-lib-link
+	[type]="ButtonType.LinkBlue"
+	[linkAppearance]="LinkAppearance.Standalone"
+	[text]="'Ссылка'"
+	[icon]="IconType.Plus"
+	[iconPosition]="IconPosition.Start"
+	[size]="ExtraSize.sm"
+/>
+
+<ss-lib-link
+	[type]="ButtonType.LinkBlue"
+	[linkAppearance]="LinkAppearance.Standalone"
+	[text]="'Ссылка'"
+	[icon]="IconType.Plus"
+	[iconPosition]="IconPosition.Start"
+	[size]="ExtraSize.md"
+/>
+
+<ss-lib-link
+	[type]="ButtonType.LinkBlue"
+	[linkAppearance]="LinkAppearance.Standalone"
+	[text]="'Ссылка'"
+	[icon]="IconType.Plus"
+	[iconPosition]="IconPosition.Start"
+	[size]="ExtraSize.lg"
+/>
+
+<ss-lib-link
+	[type]="ButtonType.LinkBlue"
+	[linkAppearance]="LinkAppearance.Standalone"
+	[text]="'Ссылка'"
+	[icon]="IconType.Plus"
+	[iconPosition]="IconPosition.Start"
+	[size]="ExtraSize.xl"
+/>
+
+<ss-lib-link
+	[type]="ButtonType.LinkBlue"
+	[linkAppearance]="LinkAppearance.Standalone"
+	[text]="'Ссылка'"
+	[icon]="IconType.Plus"
+	[iconPosition]="IconPosition.Start"
+	[size]="ExtraSize.xxl"
+/>
+
+<ss-lib-link
+	[type]="ButtonType.LinkBlue"
+	[linkAppearance]="LinkAppearance.Standalone"
+	[text]="'Ссылка'"
+	[icon]="IconType.Plus"
+	[iconPosition]="IconPosition.Start"
+	[size]="ExtraSize.xxl"
+	[disabled]="true"
+/>
+
 <!--<ss-lib-button-->
 <!--	[type]="ButtonType.Ghost"-->
 <!--	[text]="'Ghost lg'"-->
@@ -504,7 +669,7 @@
 <!--<br />-->
 
 <!--<span>Overlay button</span>-->
-<!--<ss-lib-overlay-button />-->
+<!--<ss-lib-backdrop-button />-->
 <!--<br />-->
 
 <!--<ss-lib-link-->
@@ -835,7 +1000,6 @@
 	></ss-lib-datepicker>
 </ss-lib-form-field>
 <br />
-
 
 <!--<div class="scrollbar-test">-->
 <!--	<ss-lib-scrollbar>-->
