--- a/projects/front-components/src/lib/components/buttons/link/link.component.scss
+++ b/projects/front-components/src/lib/components/buttons/link/link.component.scss
@@ -24,8 +24,8 @@ button.custom-button:disabled {
 	cursor: default;
 }
 
-button.custom-button.type-link-blue,
-button.custom-button.type-link-black {
+button.custom-button.link-standalone,
+button.custom-button.link-inline {
 	&.size-xxs,
 	&.size-xs {
 		gap: 2px;
@@ -54,17 +54,10 @@ button.custom-button.type-link-black {
 	background: transparent;
 }
 
-button.custom-button.type-link-blue.link-inline,
-button.custom-button.type-link-black.link-inline {
-}
-
-button.custom-button:hover.type-link-blue.link-standalone,
-button.custom-button:hover.type-link-black.link-standalone {
-}
-
 button.custom-button:focus-visible.type-link-blue,
 button.custom-button:focus-visible.type-link-black {
 	outline: none;
+	border-radius: var(--border-radius-xs);
 	box-shadow: var(--focus-rings-focus-ring);
 }
 
@@ -77,4 +70,30 @@ button.custom-button:focus-visible.type-link-black::before {
 	opacity: 0.1;
 	border-radius: inherit;
 	z-index: -1;
+}
+
+button.custom-button.type-link-blue .custom-button__text.underline,
+button.custom-button.type-link-black .custom-button__text.underline {
+	text-decoration: none;
+	position: relative;
+	display: inline-block;
+}
+
+button.custom-button.type-link-blue .custom-button__text.underline::after,
+button.custom-button.type-link-black .custom-button__text.underline::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: 2px;
+	width: 100%;
+	height: 1px;
+	background-color: inherit;
+}
+
+button.custom-button.type-link-blue .custom-button__text.underline::after {
+	background-color: var(--text-information);
+}
+
+button.custom-button.type-link-black .custom-button__text.underline::after {
+	background-color: var(--text-action-2);
 }
