--- a/projects/front-components/src/lib/components/light-box/light-box.component.html
+++ b/projects/front-components/src/lib/components/light-box/light-box.component.html
@@ -6,9 +6,9 @@
 		[height]="height"
 	/>
 	<div class="ss-lib-light-box__close">
-		<ss-lib-overlay-button
+		<ss-lib-backdrop-button
 			[icon]="IconType.Close"
 			(click)="close()"
-		></ss-lib-overlay-button>
+		></ss-lib-backdrop-button>
 	</div>
 </div>
