--- a/projects/test-app/src/app/stand/stand.component.scss
+++ b/projects/test-app/src/app/stand/stand.component.scss
@@ -8,12 +8,16 @@
 }
 
 .dark-close-button {
-	width: 50px;
-	height: 50px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	background: #212121;
+}
+
+.flex-center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .avatar-tmp {
