feature/3917-button-fix: fix shadow colors

--- a/projects/front-components/src/lib/shared/styles/_variables/_dark.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_dark.scss
@@ -15,8 +15,7 @@ body.dark {
 	--effects-shadows-18: #000000b8;
 	--effects-shadows-3: #0000001f;
 	--effects-shadows-4: #00000029;
-	--effects-shadows-5: green !important;
-	//--effects-shadows-5: #00000033;
+	--effects-shadows-5: #00000033;
 	--effects-shadows-6: #0000003d;
 	--effects-shadows-8: #00000052;
 	--icon-action-2: var(--neutral-400);
