--- a/projects/front-components/src/lib/components/checkbox/checkbox.component.html
+++ b/projects/front-components/src/lib/components/checkbox/checkbox.component.html
@@ -13,7 +13,7 @@
 			[height]="'12'"
 			[width]="'12'"
 			[strokeWidth]="
-				customScaleStroke | mapper: strokeWidthCheckbox : scaleSvg
+				customScaleStroke | mapper: calcStrokeWidth : scaleSvg
 			"
 			[icon]="iconComputed()"
 		></ss-lib-icon>
