--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.html
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.html
@@ -1,6 +1,6 @@
 <div class="number-picker">
 	<ss-lib-button
-		class="number-picker__number-indicator indicator-start border-none"
+		class="number-picker__number-indicator indicator-start"
 		[type]="ButtonType.Secondary"
 		[size]="ExtraSize.xl"
 		[icon]="IconType.Minus"
