--- a/projects/front-components/src/lib/shared/styles/_variables/_dark.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_dark.scss
@@ -22,6 +22,7 @@ body.dark {
 	--icon-action-2-on-color: var(--neutral-1000);
 	--icon-action-hover-2: var(--neutral-300);
 	--icon-action-hover-2-on-color: var(--neutral-1100);
+	--icon-action-pressed-2: var(--neutral-200);
 	--icon-body: var(--neutral-300);
 	--icon-body-2: var(--neutral-600);
 	--icon-body-2-on-color: var(--neutral-1000);
@@ -39,6 +40,7 @@ body.dark {
 	--icon-hero-on-color: var(--neutral-1600);
 	--icon-information: var(--primary-600);
 	--icon-information-hover: var(--primary-500);
+	--icon-information-pressed: var(--primary-400);
 	--icon-on-action: var(--neutral-white);
 	--icon-on-disabled: var(--neutral-700);
 	--icon-placeholder: var(--neutral-800);
@@ -71,11 +73,12 @@ body.dark {
 	--surface-page-secondary: var(--neutral-1500);
 	--surface-primary: var(--neutral-1400);
 	--surface-secondary: var(--neutral-1500);
-	--surface-tetriary: var(--neutral-200);
+	--surface-tertiary: var(--neutral-200);
 	--text-action-2: var(--neutral-400);
 	--text-action-2-on-color: var(--neutral-1000);
 	--text-action-hover-2: var(--neutral-300);
 	--text-action-hover-2-on-color: var(--neutral-1100);
+	--text-action-pressed-2: var(--neutral-200);
 	--text-body: var(--neutral-300);
 	--text-body-2: var(--neutral-600);
 	--text-body-2-on-color: var(--neutral-1000);
@@ -93,6 +96,7 @@ body.dark {
 	--text-hero-on-color: var(--neutral-1600);
 	--text-information: var(--primary-600);
 	--text-information-hover: var(--primary-500);
+	--text-information-pressed: var(--primary-400);
 	--text-on-action: var(--neutral-white);
 	--text-on-disabled: var(--neutral-700);
 	--text-placeholder: var(--neutral-800);
