--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -102,327 +102,306 @@
 <!--	>Жирный текст-->
 <!--</ss-lib-text>-->
 
-<ss-lib-button
-	[type]="ButtonType.Primary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xxs"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Primary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xs"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Primary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.sm"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Primary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.md"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Primary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.lg"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Primary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xl"
-/>
-<br />
-
-<div class="button-center">
-	<ss-lib-button
-		[type]="ButtonType.Primary"
-		[text]="'Пнока'"
-		[icon]="IconType.Plus"
-		[iconPosition]="IconPosition.OnlyIcon"
-		[size]="ExtraSize.lg"
-		[disabled]="true"
-		(click)="test()"
-	/>
-</div>
-
-<ss-lib-button
-	[type]="ButtonType.Primary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.lg"
-	[disabled]="true"
-	(click)="test()"
-/>
-<br />
-
-<div class="button-center">
-	<ss-lib-button
-		[type]="ButtonType.Primary"
-		[text]="'Пнока'"
-		[icon]="IconType.Plus"
-		[iconPosition]="IconPosition.OnlyIcon"
-		[size]="ExtraSize.lg"
-		(click)="test()"
-	/>
-
-	<ss-lib-button
-		[type]="ButtonType.Primary"
-		[text]="'Пнока'"
-		[icon]="IconType.Plus"
-		[iconPosition]="IconPosition.OnlyIcon"
-		[size]="ExtraSize.lg"
-		[disabled]="true"
-		(click)="test()"
-	/>
-</div>
-
-<!--===============-->
-
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xxs"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xs"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.sm"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.md"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.lg"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xl"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.lg"
-	[disabled]="true"
-	(click)="test()"
-/>
-<br />
-
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Primary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.xxs"-->
+<!--/>-->
 <!--<br />-->
 
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Secondary lg'"
-	[icon]="IconType.Bell"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.lg"
-	[disabled]="true"
-	(click)="test()"
-/>
-<br />
-
-<div class="button-center">
-	<ss-lib-button
-		[type]="ButtonType.Secondary"
-		[text]="'Пнока'"
-		[icon]="IconType.Plus"
-		[iconPosition]="IconPosition.OnlyIcon"
-		[size]="ExtraSize.lg"
-		[disabled]="true"
-		(click)="test()"
-	/>
-
-	<ss-lib-button
-		[type]="ButtonType.Primary"
-		[text]="'Пнока'"
-		[icon]="IconType.Plus"
-		[iconPosition]="IconPosition.OnlyIcon"
-		[size]="ExtraSize.lg"
-		[disabled]="true"
-		(click)="test()"
-	/>
-</div>
-
-<!--===============-->
-
-<ss-lib-button
-	[type]="ButtonType.Ghost"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xxs"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Ghost"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xs"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Ghost"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.sm"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Ghost"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.md"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Ghost"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.lg"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Ghost"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.xl"
-/>
-<br />
-
-<ss-lib-button
-	[type]="ButtonType.Ghost"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.lg"
-	[disabled]="true"
-	(click)="test()"
-/>
-<br />
-
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Primary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.xs"-->
+<!--/>-->
 <!--<br />-->
 
-<ss-lib-button
-	[type]="ButtonType.Secondary"
-	[text]="'Secondary lg'"
-	[icon]="IconType.Bell"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.lg"
-	[disabled]="true"
-	(click)="test()"
-/>
-<br />
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Primary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.sm"-->
+<!--/>-->
+<!--<br />-->
 
-<div class="button-center">
-	<ss-lib-button
-		[type]="ButtonType.Secondary"
-		[text]="'Пнока'"
-		[icon]="IconType.Plus"
-		[iconPosition]="IconPosition.OnlyIcon"
-		[size]="ExtraSize.lg"
-		[disabled]="true"
-		(click)="test()"
-	/>
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Primary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.md"-->
+<!--/>-->
+<!--<br />-->
 
-	<ss-lib-button
-		[type]="ButtonType.Ghost"
-		[text]="'Пнока'"
-		[icon]="IconType.Plus"
-		[iconPosition]="IconPosition.OnlyIcon"
-		[size]="ExtraSize.lg"
-		[disabled]="true"
-		(click)="test()"
-	/>
-</div>
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Primary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.lg"-->
+<!--/>-->
+<!--<br />-->
 
-<!--===============-->
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Primary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.xl"-->
+<!--/>-->
+<!--<br />-->
 
-<ss-lib-button
-	[type]="ButtonType.TextPrimary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.sm"
-/>
-<br />
+<!--<div class="button-center">-->
+<!--	<ss-lib-button-->
+<!--		[type]="ButtonType.Primary"-->
+<!--		[text]="'Пнока'"-->
+<!--		[icon]="IconType.Plus"-->
+<!--		[iconPosition]="IconPosition.OnlyIcon"-->
+<!--		[size]="ExtraSize.lg"-->
+<!--		[disabled]="true"-->
+<!--		(click)="test()"-->
+<!--	/>-->
+<!--</div>-->
 
-<ss-lib-button
-	[type]="ButtonType.TextSecondary"
-	[text]="'Пнока'"
-	[icon]="IconType.Plus"
-	[iconPosition]="IconPosition.OnlyIcon"
-	[size]="ExtraSize.sm"
-/>
-<br />
+<!--<div class="button-center">-->
+<!--	<ss-lib-button-->
+<!--		[type]="ButtonType.Primary"-->
+<!--		[text]="'Пнока'"-->
+<!--		[icon]="IconType.Plus"-->
+<!--		[iconPosition]="IconPosition.OnlyIcon"-->
+<!--		[size]="ExtraSize.lg"-->
+<!--		(click)="test()"-->
+<!--	/>-->
+
+<!--	<ss-lib-button-->
+<!--		[type]="ButtonType.Primary"-->
+<!--		[text]="'Пнока'"-->
+<!--		[icon]="IconType.Plus"-->
+<!--		[iconPosition]="IconPosition.OnlyIcon"-->
+<!--		[size]="ExtraSize.lg"-->
+<!--		[disabled]="true"-->
+<!--		(click)="test()"-->
+<!--	/>-->
+<!--</div>-->
+
+<!--&lt;!&ndash;===============&ndash;&gt;-->
+
+<!--<span>Кнопки secondary</span>-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Secondary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.xxs"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Secondary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.xs"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Secondary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.sm"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Secondary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.md"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Secondary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.OnlyIcon"-->
+<!--	[size]="ExtraSize.lg"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Secondary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.xl"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Secondary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.lg"-->
+<!--	[disabled]="true"-->
+<!--	(click)="test()"-->
+<!--/>-->
+<!--<br />-->
+
+<!--&lt;!&ndash;<br />&ndash;&gt;-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Secondary"-->
+<!--	[text]="'Secondary lg'"-->
+<!--	[icon]="IconType.Bell"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.lg"-->
+<!--	[disabled]="true"-->
+<!--	(click)="test()"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<div class="button-center">-->
+<!--	<ss-lib-button-->
+<!--		[type]="ButtonType.Secondary"-->
+<!--		[text]="'Пнока'"-->
+<!--		[icon]="IconType.Plus"-->
+<!--		[iconPosition]="IconPosition.End"-->
+<!--		[size]="ExtraSize.lg"-->
+<!--		(click)="test()"-->
+<!--	/>-->
+
+<!--	<ss-lib-button-->
+<!--		[type]="ButtonType.Primary"-->
+<!--		[text]="'Пнока'"-->
+<!--		[icon]="IconType.Plus"-->
+<!--		[iconPosition]="IconPosition.End"-->
+<!--		[size]="ExtraSize.lg"-->
+<!--		[disabled]="true"-->
+<!--		(click)="test()"-->
+<!--	/>-->
+<!--</div>-->
+
+<!--&lt;!&ndash;===============&ndash;&gt;-->
+<!--<span>Кнопки ghost</span>-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Ghost"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.xxs"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Ghost"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.xs"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Ghost"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.sm"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Ghost"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.md"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Ghost"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.lg"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Ghost"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.xl"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.Ghost"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.lg"-->
+<!--	[disabled]="true"-->
+<!--	(click)="test()"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<div class="button-center">-->
+<!--	<ss-lib-button-->
+<!--		[type]="ButtonType.Secondary"-->
+<!--		[text]="'Пнока'"-->
+<!--		[icon]="IconType.Plus"-->
+<!--		[iconPosition]="IconPosition.End"-->
+<!--		[size]="ExtraSize.lg"-->
+<!--		[disabled]="true"-->
+<!--		(click)="test()"-->
+<!--	/>-->
+
+<!--	<ss-lib-button-->
+<!--		[type]="ButtonType.Ghost"-->
+<!--		[text]="'Пнока'"-->
+<!--		[icon]="IconType.Plus"-->
+<!--		[iconPosition]="IconPosition.End"-->
+<!--		[size]="ExtraSize.lg"-->
+<!--		[disabled]="true"-->
+<!--		(click)="test()"-->
+<!--	/>-->
+<!--</div>-->
+
+<!--&lt;!&ndash;&lt;!&ndash;===============&ndash;&gt;&ndash;&gt;-->
+<!--<span>Кнопки text</span>-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.TextPrimary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.sm"-->
+<!--/>-->
+<!--<br />-->
+
+<!--<ss-lib-button-->
+<!--	[type]="ButtonType.TextSecondary"-->
+<!--	[text]="'Пнока'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.End"-->
+<!--	[size]="ExtraSize.sm"-->
+<!--/>-->
+<!--<br />-->
 
 <!--===============-->
 
@@ -522,7 +501,7 @@
 
 <ss-lib-link
 	[type]="ButtonType.LinkBlack"
-	[linkAppearance]="LinkAppearance.Standalone"
+	[linkAppearance]="LinkAppearance.Inline"
 	[text]="'Ссылка'"
 	[icon]="IconType.Plus"
 	[iconPosition]="IconPosition.Start"
@@ -540,7 +519,7 @@
 
 <ss-lib-link
 	[type]="ButtonType.LinkBlue"
-	[linkAppearance]="LinkAppearance.Standalone"
+	[linkAppearance]="LinkAppearance.Inline"
 	[text]="'Ссылка'"
 	[icon]="IconType.Plus"
 	[iconPosition]="IconPosition.Start"
@@ -549,7 +528,7 @@
 
 <ss-lib-link
 	[type]="ButtonType.LinkBlue"
-	[linkAppearance]="LinkAppearance.Standalone"
+	[linkAppearance]="LinkAppearance.Inline"
 	[text]="'Ссылка'"
 	[icon]="IconType.Plus"
 	[iconPosition]="IconPosition.Start"
@@ -558,7 +537,7 @@
 
 <ss-lib-link
 	[type]="ButtonType.LinkBlue"
-	[linkAppearance]="LinkAppearance.Standalone"
+	[linkAppearance]="LinkAppearance.Inline"
 	[text]="'Ссылка'"
 	[icon]="IconType.Plus"
 	[iconPosition]="IconPosition.Start"
@@ -567,7 +546,7 @@
 
 <ss-lib-link
 	[type]="ButtonType.LinkBlue"
-	[linkAppearance]="LinkAppearance.Standalone"
+	[linkAppearance]="LinkAppearance.Inline"
 	[text]="'Ссылка'"
 	[icon]="IconType.Plus"
 	[iconPosition]="IconPosition.Start"
@@ -576,7 +555,7 @@
 
 <ss-lib-link
 	[type]="ButtonType.LinkBlue"
-	[linkAppearance]="LinkAppearance.Standalone"
+	[linkAppearance]="LinkAppearance.Inline"
 	[text]="'Ссылка'"
 	[icon]="IconType.Plus"
 	[iconPosition]="IconPosition.Start"
@@ -592,6 +571,16 @@
 	[size]="ExtraSize.xxl"
 	[disabled]="true"
 />
+
+<!--<ss-lib-link-->
+<!--	[type]="ButtonType.LinkBlue"-->
+<!--	[linkAppearance]="LinkAppearance.Standalone"-->
+<!--	[text]="'Ссылка'"-->
+<!--	[icon]="IconType.Plus"-->
+<!--	[iconPosition]="IconPosition.Start"-->
+<!--	[size]="ExtraSize.xxl"-->
+<!--	[disabled]="true"-->
+<!--/>-->
 
 <!--<ss-lib-button-->
 <!--	[type]="ButtonType.Ghost"-->
