feature/3917-button-fix: uncommit stand

--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
@@ -1,9 +1,16 @@
+.number-picker-wrapper {
+	--shadow-xs-number-picker: var(--shadow-xs);
+	--app-custom-input-line-height: normal;
+}
+
 .number-picker {
 	width: 148px;
 	display: flex;
 	align-items: center;
 	border-radius: var(--border-radius-md);
-	box-shadow: var(--shadow-xs);
+	box-shadow: var(--shadow-xs-number-picker);
+
+	--shadow-xs: none;
 
 	&__number-indicator.indicator-start {
 		--app-custom-button-border-radius-top-right: 0;
@@ -17,6 +24,11 @@
 		outline-offset: -1px;
 		margin-right: -1px;
 		z-index: 5;
+	}
+
+	&__number-indicator.indicator-start:disabled {
+		--app-border-shadow-secondary-btn: none;
+		--app-border-shadow-secondary-btn-active: none;
 	}
 
 	&__number-indicator.indicator-end {
