--- a/projects/front-components/src/lib/components/checkbox/checkbox.component.html
+++ b/projects/front-components/src/lib/components/checkbox/checkbox.component.html
@@ -1,6 +1,6 @@
 <div
 	class="checkbox"
-	tabindex="0"
+	[attr.tabindex]="isDisabled() ? null : 0"
 	[class.checkbox--active]="checked() || indeterminate()"
 	[class.checkbox--disabled]="isDisabled()"
 	[class.checkbox--error]="isError()"
