--- a/projects/front-components/src/lib/components/toast/toast.component.scss
+++ b/projects/front-components/src/lib/components/toast/toast.component.scss
@@ -7,7 +7,7 @@
 	justify-content: space-between;
 	gap: 24px;
 
-	background-color: var(--surface-tetriary);
+	background-color: var(--surface-tertiary);
 	outline: 1px solid var(--border-tertiary);
 
 	position: absolute;
