--- a/projects/front-components/src/lib/components/toggle/toggle.component.scss
+++ b/projects/front-components/src/lib/components/toggle/toggle.component.scss
@@ -10,15 +10,15 @@
 	cursor: pointer;
 
 	&.checked {
-		background: var(--surface-action, #0b77ca);
+		background: var(--surface-action);
 	}
 
 	&:not(.checked):hover {
-		background: var(--surface-action-pressed-2, #d5d7da);
+		background: var(--surface-action-pressed-2);
 	}
 
 	&.checked:hover {
-		background: var(--surface-action-hover, #095fa2);
+		background: var(--surface-action-hover);
 	}
 
 	&:focus-visible {
@@ -35,8 +35,9 @@
 	}
 
 	&.disabled {
-		background: var(--surface-disabled, #f5f5f5) !important;
+		background: var(--surface-disabled) !important;
 		cursor: default;
+		pointer-events: none;
 	}
 }
 
@@ -47,7 +48,7 @@
 	justify-content: center;
 	width: 16px;
 	height: 16px;
-	background: var(--icon-on-action, #fff);
+	background: var(--icon-on-action);
 	box-shadow: var(--shadow-sm);
 	border-radius: 100%;
 	transition: left 0.2s ease-in-out;
