--- a/projects/test-app/src/app/stand/stand.component.scss
+++ b/projects/test-app/src/app/stand/stand.component.scss
@@ -62,6 +62,18 @@
 	flex: 0 0 auto;
 }
 
+.icon-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-width: 100px;
+	text-align: center;
+}
+
+.icon-wrapper > * {
+	margin-bottom: 8px;
+}
+
 .disabled-demo {
 	opacity: 0.5;
 	pointer-events: none;
@@ -71,9 +83,12 @@
 	margin-bottom: 12px;
 }
 
-.divider {
-	border-top: 1px solid #e0e0e0;
-	margin: 16px 0;
+.full-width {
+	width: 100%;
+}
+
+.hide {
+	display: none;
 }
 
 .dark-background {
